--- a/.css
+++ b/.css
@@ -1,3 +1,7 @@
+<head>
+<link rel="stylesheet" href="styles.css">
+</head>
+
 element.style {
 }
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
